--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,8 +16,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".OnboardingScreen" />
-        <activity android:name=".LandingScreen" />
+        <activity android:name=".OnboardingActivity"></activity>
     </application>
 
 </manifest>
