--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".main.home"
-            android:label="@string/title_activity_home"></activity>
+            android:label="@string/main_activity_home"></activity>
         <activity android:name=".SplashScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -20,6 +20,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".onboarding.OnboardingInstruction" />
+        <activity android:name=".main.ui.home.habit.HabitType" />
     </application>
 
 </manifest>
