added stampcard template

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,8 @@
         </activity>
         <activity android:name=".onboarding.OnboardingInstruction" />
         <activity android:name=".main.ui.home.habit.HabitType" />
+        <activity android:name=".main.ui.home.habit.HabitPhysique" />
+        <activity android:name=".main.ui.home.habit.HabitMind" />
     </application>
 
 </manifest>
