--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".main.home"
+            android:name=".main.Home"
             android:label="@string/main_activity_home"></activity>
         <activity android:name=".SplashScreen">
             <intent-filter>
@@ -19,10 +19,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".onboarding.ob_welcomeScreen" />
-        <activity android:name=".onboarding.ob_SelectPartnerScreen" />
-        <activity android:name=".onboarding.ob_selected_cat" />
-        <activity android:name=".onboarding.ob_selected_dog" />
+        <activity android:name=".onboarding.OnboardingWelcomeScreen" />
+        <activity android:name=".onboarding.OnboardingSelectPartnerScreen" />
+        <activity android:name=".onboarding.OnboardingSelectedPartnerScreen" />
         <activity android:name=".onboarding.OnboardingInstruction" />
         <activity android:name=".main.ui.home.habit.HabitType" />
         <activity android:name=".main.ui.home.habit.HabitPhysique" />
