--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,5 +27,7 @@
         <activity android:name=".main.ui.home.habit.HabitPhysique" />
         <activity android:name=".main.ui.home.habit.HabitMind" />
         <activity android:name=".main.ui.home.stamp_card.StampCard" />
+        <activity android:name=".main.ui.pethouse.PethouseRewards" />
+        <activity android:name=".main.ui.pethouse.PethouseStore" />
     </application>
 </manifest>
